@@ -3,6 +3,7 @@
  - enh: use data size as cache size if smaller than requested chunk size
  - enh: return dictionary for brightness feature computation
  - enh: allow to pass a single image for brightness feature computation
+ - enh: allow to pass a single image for texture feature computation
  - ref: haralick texture computation now returns dict instead of recarray
 0.0.7
  - enh: dataset keyword arguments and mode HDF5WriterThread
